# spmkit-data-hunter

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLASSIFICATION_FIX_REPORT.md  CONTRIBUTING.md  MIGRATION.md  PROJECT_MANIFEST.json  README.md  SCIENTIFIC_DATA_HUNTING_BIBLE.md  UPLOAD_TO_GITHUB.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md  dataset_candidate.md
.github/workflows/: ci.yml
Legacy/: CHANGELOG.md  CITATION.cff  PROJECT_MANIFEST.json  README.md  UPLOAD_TO_GITHUB.md
Legacy/examples/: queries.txt
Legacy/src/: spmkit_data_hunter.py
Legacy/tests/: test_core.py
branding/: ASSETS.md
docs/: ARCHITECTURE.md  FORMAT_MATRIX.md  OPERATIONS.md  ROADMAP.md  SOURCE_ADAPTER_GUIDE.md  THREAT_MODEL.md  VALIDATION_TAXONOMY.md  usage-guide.md  usage-guide.tex
docs/adr/: 0001-campaign-checkpoints.md  0002-utility-classes.md
src/: spmkit_data_hunter.py
src/spmkit_data_hunter/: __init__.py  campaigns.py  catalog_io.py  cli.py  engine.py  legacy.py  sources.py  verification.py  version.py
tests/: test_campaigns.py  test_core.py
